--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,16 @@ code {
   display: flex;
 }
 
+@media (max-width: 600px) {
+  .products-pane {
+    display: block;
+    margin-top  : 150px;
+  }
+}
+
 .product-set {
   display: flex;
   flex-direction: column;
   align-items: center;
+ 
 }
